[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/game_server/online_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/vs_entrance_scene.gd" type="Script" id=3]
[ext_resource path="res://scenes/deck_scene/banner.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/deck_scene/select_use_scene.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="VS_EntranceScene" type="Node"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="Matching" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -224.0
margin_top = -168.0
margin_right = 224.0
margin_bottom = -32.0
text = "繋ぐ"

[node name="Button2" type="Button" parent="Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 80.0
text = "BACK"

[node name="Label" type="Label" parent="Panel"]
margin_left = 320.0
margin_top = 320.0
margin_right = 960.0
margin_bottom = 512.0
text = "Online 対戦"
align = 1
valign = 1

[node name="DeckBanner" parent="Panel" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -320.0
margin_right = 360.0
margin_bottom = -104.0

[node name="ButtonDeckChange" type="Button" parent="Panel/DeckBanner"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="DeckSelectScene" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Node" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="Panel/Matching" to="." method="_on_Matching_pressed"]
[connection signal="pressed" from="Panel/DeckBanner/ButtonDeckChange" to="." method="_on_ButtonDeckChange_pressed"]
[connection signal="decided" from="DeckSelectScene" to="." method="_on_DeckSelectScene_decided"]
